fix 20px white space on parallax sections

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -42,6 +42,10 @@ body {
 /*.hidden-quotes {
 	opacity; 0;
 }*/
+/* workaround for chrome browser bottom margin */
+.parallax-row {
+	margin-bottom: -20px;
+}
 
 /* bio section */
 a {
